test/library/standard/DateTime/timezoneAwarenessMismatch.6.good
timezoneAwarenessMismatch.chpl:51: error: both dateTimes must both be either naive or aware
